--- a/home/home.html
+++ b/home/home.html
@@ -8,24 +8,19 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet" />    
+    />    
+    <link rel="stylesheet" href="../css/common.css"/>
   </head>
   <body>
     <div class="wrapper">
       <!-- 상단바 -->
       <header></header>
-
       <!-- 상세페이지 + 메인 -->
       <div class="container">
         <!-- 상세페이지 -->
-        <aside></aside>
-        <div class="sidebarExpanded"></div>
+        <aside></aside>        
         <div class="right-content">
-          <div class="nav"></div>
-          
+          <div class="nav"></div>          
           <!--메인-->
           <main>
             <section class="card-container"></section>
