--- a/top/html/header-top.html
+++ b/top/html/header-top.html
@@ -1,5 +1,5 @@
 <!-- 상단바 1 -->
-<header class="header-top">
+<div class="header-top">
   <div class="left">
     <!-- 햄버그 버튼 추가 -->
     <button class="menu-button" id="menuButton">
@@ -27,4 +27,4 @@
     <img src="../img/notice.png" alt="알림" class="icon" />
     <img src="../img/profile.png" alt="프로필" class="icon" />
   </div>
-</header>    
+</div>    
