--- a/Channel/channel.html
+++ b/Channel/channel.html
@@ -6,8 +6,7 @@
     <title>Document</title>
     <link href="styles/channel.css" rel="stylesheet" />
     <link rel="stylesheet" href="../css/common.css"/>    
-    <link rel="stylesheet" href="./styles/channel.css"/>
-    <link rel="stylesheet" href="./styles/channel-title.css"/>
+    <link rel="stylesheet" href="./channel.css"/>    
 </head>
 <body>
     <div class="wrapper">
@@ -19,10 +18,9 @@
             <aside></aside>       
             <!--메인-->
             <main>
-
-                <section class="card-container">
+                <div class="card-container">
                     <!-- Channel Title -->                    
-                    <div class="channel-header">
+                    <section class="channel-header">
                         <div class="banner">
                             <img alt="채널 배너" class="banner-img" id="banner-img"/>
                         </div>
@@ -51,41 +49,31 @@
                             </li>
                             </ul>
                         </nav>                                         
-                    </div>
+                    </section>
 
-                    <!-- SmallVideo -->
-                    <div class="main">                        
-                        <section class="featured-video">
-                            <div class="video-main-preview" >
-                                <img id="main-img" class="video-thumb" >      
-                                <div class="custom-play-button" id="play-button">▶</div>
-                            </div>
-                            <div class="video-description" >
-                                <h2 id="video-description"></h2>
-                                <p><span id="viewText"></span> views  <span id="date"></span></p>      
-                            </div>
-                        </section>  
-                    </div>
+                    <!-- SmallVideo -->                                           
+                    <section class="smallVideo-section">
+                        <div class="video-main-preview" >
+                            <img id="main-img" class="video-thumb" >      
+                            <div class="custom-play-button" id="play-button">▶</div>
+                        </div>
+                        <div class="video-description" >
+                            <h2 id="video-description"></h2>
+                            <p><span id="viewText"></span> views  <span id="date"></span></p>      
+                        </div>
+                    </section>               
 
-                    <!--- playVideoList -->
-                    <div class="footer">
-                        <div class="layout">
-                            <div class="main-content">
-                                <section class="playlist-section">
-                                <div class="playlist-header">
-                                    <h3>Search On '21</h3>
-                                    <button class="play-all-btn">▶ PLAY ALL</button>
-                                </div>
-                                <div class="playlist-grid">
-                                    
-                                </div>
-                                </section>
-                            </div>
-                        </div>  
-                    </div>
-                </section>
-            </main>
-            </div>
+                    <!--- playVideoList -->                       
+                    <section class="playlist-section">
+                        <div class="playlist-header">
+                            <h3>Search On '21</h3>
+                            <button class="play-all-btn">▶ PLAY ALL</button>
+                        </div>
+                        <div class="playlist-grid">                            
+                        </div>
+                    </section>                    
+                </div>
+            </main>            
         </div>
     </div>
     <script src="../js/loadHTML.js"></script>     
