전체적인 검색기능 수정

--- a/home/home.html
+++ b/home/home.html
@@ -28,7 +28,7 @@
           
           <!--메인-->
           <main>
-            <section class="card-container"></section>
+            <section class="card-container" id="card-container"></section>
           </main>
         </div>
       </div>
@@ -42,6 +42,7 @@
     <!-- 총 영상 정보 -->
     <script src="../api/getVideoList.js"></script>
     <script src="../sidebar/sidebar.js"></script>
+    <script src="../Channel/channel-search.js"></script>
     <script src="./home.js"></script>   
   </body>
 </html>
