--- a/top/html/header-top.html
+++ b/top/html/header-top.html
@@ -13,7 +13,7 @@
   <div class="center">
     <form class="search-form" onsubmit="return false;">
       <input type="text" class="search-input" placeholder="Search" id="searchInput"/>
-      <button class="search-button" id="searchButton">
+      <button type="submit" class="search-button" id="searchButton">
         <img src="../img/search.png" alt="검색" class="icon" />
       </button>
     </form>
