메인 페이지 button type 추가

--- a/home/home.html
+++ b/home/home.html
@@ -23,7 +23,7 @@
           <div class="nav"></div>          
           <!--메인-->
           <main>
-            <section class="card-container"></section>
+            <section class="card-container" id="card-container"></section>
           </main>
         </div>
       </div>
@@ -36,7 +36,11 @@
     <script src="../api/getChannelInfo.js"></script>      
     <!-- 총 영상 정보 -->
     <script src="../api/getVideoList.js"></script>
+    <!-- 사이드 바 -->
     <script src="../sidebar/sidebar.js"></script>
+    <script src="../api/getVideoInfo.js"></script>
+    <!-- 검색 엔진 -->
+    <script src="../js/serach.js"></script>
     <script src="./home.js"></script>   
   </body>
 </html>
