비디오 상세정보 추가

--- a/videos/videos.html
+++ b/videos/videos.html
@@ -85,9 +85,8 @@
                 <!-- 업로드 날짜 -->
                 <span id="date"></span>
               </div>
-              <p class="video-description">
-                고양이가 점프하다가 넘어지는 영상이에요
-              </p>
+              <span id="description" class="video-description">
+              </span>
             </section>
 
             <!--- 추천영상 밑 정렬 -->
