비디오 댓글이미지

--- a/Channel/channel.html
+++ b/Channel/channel.html
@@ -84,5 +84,6 @@
     <script src="../js/getTimeAgo.js"></script>
     <script src="../js/getChannelEverything.js"></script>
     <script src="./channel.js"></script>       
+    <script src="./channel-.js"></script>       
 </body>
 </html>
