--- a/top/html/header-top.html
+++ b/top/html/header-top.html
@@ -2,9 +2,9 @@
 <div class="header-top">
   <div class="left">
     <!-- 600px 미만 뒤로가기 버튼 -->
-    <!-- <button class="menu-button" id="menuButton" style="display: none;">
-      <img src="../img/burger.png" alt="메뉴" class="icon" />
-    </button> -->
+    <button class="back-Button" id="BackButton" style="display: none;">
+      <img src="../img/burger.png" alt="뒤로가기" class="icon" />
+    </button>
     <!-- 햄버그 버튼 추가 -->
     <button class="menu-button" id="menuButton">
       <img src="../img/burger.png" alt="메뉴" class="icon" />
