suho 브랜치에서 파일을 Blue 브랜치로 가져오기

--- a/home/home.html
+++ b/home/home.html
@@ -23,7 +23,7 @@
           <div class="nav"></div>          
           <!--메인-->
           <main>
-            <section class="card-container" id="card-container"></section>
+            <section class="card-container"></section>
           </main>
         </div>
       </div>
@@ -37,7 +37,6 @@
     <!-- 총 영상 정보 -->
     <script src="../api/getVideoList.js"></script>
     <script src="../sidebar/sidebar.js"></script>
-    <script src="../Channel/channel-search.js"></script>
     <script src="./home.js"></script>   
   </body>
 </html>
