채널 구독버튼 수정

--- a/Channel/channel.html
+++ b/Channel/channel.html
@@ -32,7 +32,10 @@
                             <h1 class="channel-name" id="channel-name"></h1>
                             <p class="subscribers" id="subscribers"> subscribers</p>
                             </div>
-                            <button id="subscribe-btn" class="subscribe-btn">구독</button>
+                            <button id="subscribe-btn" class="subscribe-btn">
+                                <img id="bell-icon" src="/img/bell.png" alt="bell" style="display: none;">
+                                <span id="subscribe-text">구독</span>
+                            </button>
                         </div>
                         <nav class="channel-nav">
                             <ul>
@@ -84,5 +87,6 @@
     <script src="../js/getTimeAgo.js"></script>
     <script src="../js/getChannelEverything.js"></script>
     <script src="./channel.js"></script>       
+    <script src="./channel-.js"></script>       
 </body>
 </html>
