--- a/home/home.html
+++ b/home/home.html
@@ -23,7 +23,7 @@
           <div class="nav"></div>          
           <!--메인-->
           <main>
-            <section class="card-container"></section>
+            <section class="card-container"></section> 
           </main>
         </div>
       </div>
@@ -38,5 +38,7 @@
     <script src="../api/getVideoList.js"></script>
     <script src="../sidebar/sidebar.js"></script>
     <script src="./home.js"></script>   
+    <!-- 조회수, 작성일 -->
+    <script src="../js/getChannelEverything.js"></script>
   </body>
 </html>
