--- a/videos/videos.html
+++ b/videos/videos.html
@@ -28,7 +28,7 @@
                 <h3 id="channel-name"></h3>
                 <span class="subscribers" id="subscribers">subscribers</span>
               </div>
-              <button class="subscribe-btn">구독</button>
+              <button class="subscribe-btn"></button>
             </div>
             <!-- 비디오 액션 버튼 그룹 -->
             <div class="video-actions">
