--- a/home/home.html
+++ b/home/home.html
@@ -40,7 +40,11 @@
     <script src="../sidebar/sidebar.js"></script>
     <script src="../api/getVideoInfo.js"></script>
     <!-- 검색 엔진 -->
-    <script src="../js/serach.js"></script>
+    <script src="../js/serachAlgorithm.js"></script>
+    <!-- 검색시 메인페이지 이동 -->
+    <script src="../js/searchButton.js"></script>
+    <!-- 600px 미만일때 최상단 반응형 -->
+    <script src="../js/topLoad600px.js"></script>
     <script src="./home.js"></script>   
   </body>
 </html>
