--- a/top/html/header-top.html
+++ b/top/html/header-top.html
@@ -1,10 +1,6 @@
 <!-- 상단바 1 -->
 <div class="header-top">
-  <div class="left">
-    <!-- 600px 미만 뒤로가기 버튼 -->
-    <button class="back-Button" id="BackButton" style="display: none;">
-      <img src="../img/burger.png" alt="뒤로가기" class="icon" />
-    </button>
+  <div class="left">   
     <!-- 햄버그 버튼 추가 -->
     <button class="menu-button" id="menuButton">
       <img src="../img/burger.png" alt="메뉴" class="icon" />
@@ -16,6 +12,10 @@
   </div>
   <div class="center">
     <form class="search-form" onsubmit="return false;">
+      <!-- 600px 미만 뒤로가기 버튼 -->
+      <button class="back-Button" id="backButton" style="display: none;">
+        <img src="../img/back.png" alt="뒤로가기" class="icon" />
+      </button>
       <input type="text" class="search-input" placeholder="Search" id="searchInput"/>
       <button type="submit" class="search-button" id="searchButton">
         <img src="../img/search.png" alt="검색" class="icon" />
