--- a/videos/videos.html
+++ b/videos/videos.html
@@ -117,6 +117,8 @@
   <script src="../api/getChannelInfo.js"></script>
   <script src="../api/getVideoList.js"></script>
   <script src="../js/getChannelEverything.js"></script>
+  <script src="../js/searchButton.js"></script>
+  <script src="../js/topLoad600px.js"></script>
   <script src="./videos.js"></script>  
 </body>
 </html>
