--- a/Channel/channel.html
+++ b/Channel/channel.html
@@ -60,6 +60,7 @@
                             <img id="main-img" class="video-thumb" >      
                             <div class="custom-play-button" id="play-button">▶</div>
                         </div>
+                        
                         <div class="video-description" >
                             <h2 id="video-description"></h2>
                             <p><span id="viewText"></span> views  <span id="date"></span></p>      
@@ -87,6 +88,6 @@
     <script src="../js/getTimeAgo.js"></script>
     <script src="../js/getChannelEverything.js"></script>
     <script src="./channel.js"></script>       
-    <script src="./channel-.js"></script>       
+    <script src="./channel-search.js"></script>       
 </body>
 </html>
