--- a/home/home.html
+++ b/home/home.html
@@ -23,7 +23,7 @@
           <div class="nav"></div>          
           <!--메인-->
           <main>
-            <section class="card-container"></section> 
+            <section class="card-container" id="card-container"></section>
           </main>
         </div>
       </div>
@@ -36,7 +36,15 @@
     <script src="../api/getChannelInfo.js"></script>      
     <!-- 총 영상 정보 -->
     <script src="../api/getVideoList.js"></script>
+    <!-- 사이드 바 -->
     <script src="../sidebar/sidebar.js"></script>
+    <script src="../api/getVideoInfo.js"></script>
+    <!-- 검색 엔진 -->
+    <script src="../js/serachAlgorithm.js"></script>
+    <!-- 검색시 메인페이지 이동 -->
+    <script src="../js/searchButton.js"></script>
+    <!-- 600px 미만일때 최상단 반응형 -->
+    <script src="../js/topLoad600px.js"></script>
     <script src="./home.js"></script>   
     <!-- 조회수, 작성일 -->
     <script src="../js/getChannelEverything.js"></script>
