구독버튼 수정

--- a/videos/videos.html
+++ b/videos/videos.html
@@ -28,7 +28,10 @@
                 <h3 id="channel-name"></h3>
                 <span class="subscribers" id="subscribers">subscribers</span>
               </div>
-              <button class="subscribe-btn"></button>
+              <button id="subscribe-btn" class="subscribe-btn">
+                <img id="bell-icon" src="/img/bell.png" alt="bell" style="display: none;">
+                <span id="subscribe-text">구독</span>
+            </button>
             </div>
             <!-- 비디오 액션 버튼 그룹 -->
             <div class="video-actions">
