--- a/top/html/header-top.html
+++ b/top/html/header-top.html
@@ -12,7 +12,7 @@
   </div>
   <div class="center">
     <form class="search-form" onsubmit="return false;">
-      <input type="text" class="search-input" placeholder="Search" id="searchInput"/>
+      <input type="text" class="search-input" placeholder="Search" id="searchInput" placeholder="Search"/>
       <button class="search-button" id="searchButton">
         <img src="../img/search.png" alt="검색" class="icon" />
       </button>
