--- a/top/html/header-top.html
+++ b/top/html/header-top.html
@@ -12,8 +12,12 @@
   </div>
   <div class="center">
     <form class="search-form" onsubmit="return false;">
-      <input type="text" class="search-input" placeholder="Search" id="searchInput" placeholder="Search"/>
-      <button class="search-button" id="searchButton">
+      <!-- 600px 미만 뒤로가기 버튼 -->
+      <button class="back-Button" id="backButton" style="display: none;">
+        <img src="../img/back.png" alt="뒤로가기" class="icon" />
+      </button>
+      <input type="text" class="search-input" placeholder="Search" id="searchInput"/>
+      <button type="submit" class="search-button" id="searchButton">
         <img src="../img/search.png" alt="검색" class="icon" />
       </button>
     </form>
