--- a/Channel/channel.html
+++ b/Channel/channel.html
@@ -31,8 +31,12 @@
                             <div class="text-info">
                             <h1 class="channel-name" id="channel-name"></h1>
                             <p class="subscribers" id="subscribers"> subscribers</p>
-                            </div>
-                            <button id="subscribe-btn" class="subscribe-btn">구독</button>
+                            </div>    
+                            <!-- 구독 버튼 -->                        
+                            <button id="subscribe-btn" class="subscribe-btn">
+                                <img class="bell-icon" id="bell-icon" src="../img/bell.png" alt="bell" style="display: none;">
+                                <span id="subscribe-text">구독</span>
+                            </button>         
                         </div>
                         <nav class="channel-nav">
                             <ul>
