메인 페이지 script 추가

--- a/home/home.html
+++ b/home/home.html
@@ -38,6 +38,7 @@
     <script src="../api/getVideoList.js"></script>
     <!-- 사이드 바 -->
     <script src="../sidebar/sidebar.js"></script>
+    <script src="../js/getChannelEverything.js"></script>
     <script src="../api/getVideoInfo.js"></script>
     <!-- 검색 엔진 -->
     <script src="../js/serachAlgorithm.js"></script>
