--- a/Channel/channel.html
+++ b/Channel/channel.html
@@ -87,7 +87,7 @@
     <script src="../api/getChannelInfo.js"></script>
     <script src="../js/getTimeAgo.js"></script>
     <script src="../js/getChannelEverything.js"></script>
-    <script src="../js/searchButton.js"></script>
+    <script src="../js/searching.js"></script>
     <script src="../js/topLoad600px.js"></script>
     <script src="./channel.js"></script>       
 </body>
