비디오 페이지 script 수정

--- a/videos/videos.html
+++ b/videos/videos.html
@@ -121,7 +121,7 @@
   <script src="../api/getChannelInfo.js"></script>
   <script src="../api/getVideoList.js"></script>
   <script src="../js/getChannelEverything.js"></script>
-  <script src="../js/searchButton.js"></script>
+  <script src="../js/searching.js"></script>
   <script src="../js/topLoad600px.js"></script>
   <script src="./videos.js"></script>  
 </body>
