--- a/Channel/channel.html
+++ b/Channel/channel.html
@@ -90,6 +90,11 @@
     <script src="../js/searching.js"></script>
     <script src="../js/topLoad600px.js"></script>
     <script src="./channel.js"></script>       
-    <script src="./channel-search.js"></script>       
+    <script src="./channel-search.js"></script>
+    <!-- Error Handler -->
+    <script type="module">
+        import { initErrorHandlers } from '../js/errorHandlers.js';
+        initErrorHandlers();  // 페이지 로드 후 자동으로 에러 핸들러 초기화
+    </script>
 </body>
 </html>
