--- a/videos/videos.html
+++ b/videos/videos.html
@@ -28,7 +28,9 @@
             <!-- 채널 정보 -->
             <section class="channel-info-section">
               <div class="channel-info">
+                <a href="" id="channel-link">
                 <img alt="채널 프로필" class="channel-avatar" id="channel-profile"/>
+                </a>
                 <div class="channel-details">
                   <div>
                     <h3 id="channel-name"></h3>
