채널 페이지 samllVideo a 태그 추가

--- a/Channel/channel.html
+++ b/Channel/channel.html
@@ -59,8 +59,10 @@
                         <!-- SmallVideo -->                                           
                         <section class="smallVideo-section">
                             <div class="video-main-preview" >
-                                <img id="main-img" class="video-thumb" >      
-                                <div class="custom-play-button" id="play-button">▶</div>
+                                <a id="video-link">
+                                    <img id="main-img" class="video-thumb" >      
+                                    <div class="custom-play-button" id="play-button">▶</div>
+                                </a>
                             </div>
                             <div class="video-description" >
                                 <h2 id="video-description"></h2>
