에러 핸들러 수정중

--- a/home/home.html
+++ b/home/home.html
@@ -46,6 +46,7 @@
     <script src="../js/searching.js"></script>
     <!-- 600px 미만일때 최상단 반응형 -->
     <script src="../js/topLoad600px.js"></script>
+    <script src="../js/errorHandlers.js"></script>
     <script src="./home.js"></script>   
   </body>
 </html>
