채널 페이지 에러 스크립트 추가

--- a/Channel/channel.html
+++ b/Channel/channel.html
@@ -87,12 +87,14 @@
     <script src="../js/loadHTML.js"></script>     
     <script src="../js/page1315px.js"></script>
     <script src="../sidebar/sidebar.js"></script>
+    <script src="../js/errorHandlers.js"></script>
     <script src="../api/getChannelVideoList.js"></script>  
     <script src="../api/getChannelInfo.js"></script>
     <script src="../js/getTimeAgo.js"></script>
     <script src="../js/getChannelEverything.js"></script>
     <script src="../js/searching.js"></script>
     <script src="../js/topLoad600px.js"></script>
+    
     <script src="./channel.js"></script>       
 </body>
 </html>
