--- a/videos/videos.html
+++ b/videos/videos.html
@@ -122,8 +122,10 @@
   <script src="../api/getChannelInfo.js"></script>
   <script src="../api/getVideoList.js"></script>
   <script src="../js/getChannelEverything.js"></script>
-  <script src="../js/searching.js"></script>
+  <script src="../js/searching.js"></script>  
+  <script src="../js/errorHandlers.js"></script>
   <script src="../js/topLoad600px.js"></script>
-  <script src="./videos.js"></script>  
+  <script src="../api/getAIapi.js"></script>
+  <script src="./videos.js"></script>    
 </body>
 </html>
