접힌 사이드바 링크 추가

--- a/sidebar/html/aside2.html
+++ b/sidebar/html/aside2.html
@@ -3,12 +3,12 @@
         <ul>
             <!-- Home -->
             <li>
-                <a href="#">
+                <a href="../../home/home.html">
                 <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M4 10V21H10V15H14V21H20V10L12 3L4 10Z" fill="white" /></svg>Home</a>
             </li>        
             <!-- Subscription -->
             <li>
-                <a href="#">
+                <a href="../Channel/channel.html?id=1">                
                 <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path d="M10 18V12L15 15L10 18ZM17 3H7V4H17V3ZM20 6H4V7H20V6ZM22 9H2V21H22V9ZM3 10H21V20H3V10Z" fill="white" />
                 </svg>
