--- a/home/home.html
+++ b/home/home.html
@@ -28,26 +28,35 @@
         </div>
       </div>
     </div>     
-    <!--로드-->
-    <script src="../js/loadHTML.js"></script>   
-    <!--1315 미만일때-->
-    <script src="../js/page1315px.js"></script>    
+    <!-- 에러 핸들러 --> 
+    <script src="../js/errorHandlers.js"></script>
+
     <!-- 채널 정보 -->
     <script src="../api/getChannelInfo.js"></script>      
+    <!-- 비디오 정보 -->
+    <script src="../api/getVideoInfo.js"></script>
     <!-- 총 영상 정보 -->
     <script src="../api/getVideoList.js"></script>
+    <!-- AI api -->
+    <script src="../api/getAIapi.js"></script> 
+    
+    <!--로드-->
+    <script src="../js/loadHTML.js"></script>   
     <!-- 사이드 바 -->
     <script src="../sidebar/sidebar.js"></script>
-    <script src="../js/getChannelEverything.js"></script>
-    <script src="../api/getVideoInfo.js"></script>
-    <!-- 검색 엔진 -->
-    <script src="../js/serachAlgorithm.js"></script>
-    <!-- 검색시 메인페이지 이동 -->
-    <script src="../js/searching.js"></script>
     <!-- 600px 미만일때 최상단 반응형 -->
     <script src="../js/topLoad600px.js"></script>
-    <script src="../api/getAIapi.js"></script>  
-    <script src="../js/errorHandlers.js"></script>
+    <!--1315 미만일때-->
+    <script src="../js/page1315px.js"></script>    
+    <!-- 계산기 -->
+    <script src="../js/getChannelEverything.js"></script>
+
+    
+    <!-- 검색시 메인페이지 이동 -->
+    <script src="../js/searching.js"></script>      
+    <!-- 검색 엔진 -->
+    <script src="../js/serachAlgorithm.js"></script>              
+    <!-- 페이지 엔트리 포인트 -->
     <script src="./home.js"></script>   
   </body>
 </html>
