--- a/Channel/channel.html
+++ b/Channel/channel.html
@@ -66,7 +66,7 @@
                             </div>
                             <div class="video-description" >
                                 <h2 id="video-description"></h2>
-                                <p><span id="viewText"></span> views  <span id="date"></span></p>      
+                                <p><span id="viewText"></span><span id="date"></span></p>      
                             </div>
                         </section>               
 
