index 파일로 변환 및 수정

--- a/sidebar/html/aside2.html
+++ b/sidebar/html/aside2.html
@@ -3,7 +3,7 @@
         <ul>
             <!-- Home -->
             <li>
-                <a href="../../home/home.html">
+                <a href="../../index.html">
                 <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M4 10V21H10V15H14V21H20V10L12 3L4 10Z" fill="white" /></svg>Home</a>
             </li>        
             <!-- Subscription -->
