--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="home.css" rel="stylesheet" />
+    <link href="./home/home.css" rel="stylesheet" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />    
-    <link rel="stylesheet" href="../css/common.css"/>
+    <link rel="stylesheet" href="./css/common.css"/>
   </head>
   <body>
     <div class="wrapper">
@@ -29,34 +29,34 @@
       </div>
     </div>     
     <!-- 에러 핸들러 --> 
-    <script src="../js/errorHandlers.js"></script>
+    <script src="./js/errorHandlers.js"></script>
 
     <!-- 채널 정보 -->
-    <script src="../api/getChannelInfo.js"></script>      
+    <script src="./api/getChannelInfo.js"></script>      
     <!-- 비디오 정보 -->
-    <script src="../api/getVideoInfo.js"></script>
+    <script src="./api/getVideoInfo.js"></script>
     <!-- 총 영상 정보 -->
-    <script src="../api/getVideoList.js"></script>
+    <script src="./api/getVideoList.js"></script>
     <!-- AI api -->
-    <script src="../api/getAIapi.js"></script> 
+    <script src="./api/getAIapi.js"></script> 
     
     <!--로드-->
-    <script src="../js/loadHTML.js"></script>   
+    <script src="./js/loadHTML.js"></script>   
     <!-- 사이드 바 -->
-    <script src="../sidebar/sidebar.js"></script>
+    <script src="./sidebar/sidebar.js"></script>
     <!-- 600px 미만일때 최상단 반응형 -->
-    <script src="../js/topLoad600px.js"></script>
+    <script src="./js/topLoad600px.js"></script>
     <!--1315 미만일때-->
-    <script src="../js/page1315px.js"></script>    
+    <script src="./js/page1315px.js"></script>    
     <!-- 계산기 -->
-    <script src="../js/getChannelEverything.js"></script>
+    <script src="./js/getChannelEverything.js"></script>
 
     
     <!-- 검색시 메인페이지 이동 -->
-    <script src="../js/searching.js"></script>      
+    <script src="./js/searching.js"></script>      
     <!-- 검색 엔진 -->
-    <script src="../js/serachAlgorithm.js"></script>              
+    <script src="./js/serachAlgorithm.js"></script>              
     <!-- 페이지 엔트리 포인트 -->
-    <script src="./home.js"></script>   
+    <script src="./home/home.js"></script>   
   </body>
 </html>
