index 파일로 수정

--- a/error/error.html
+++ b/error/error.html
@@ -23,7 +23,7 @@
         <div>
             <h1>404</h1>
             <h2>요청하신 페이지를 찾을 수 없습니다.</h2>
-            <button onclick="location.href='../home/home.html'">메인페이지 이동</button>    
+            <button onclick="location.href='../index.html'">메인페이지 이동</button>    
         </div>
     </div>
 </body>
