--- a/videos/videos.html
+++ b/videos/videos.html
@@ -38,7 +38,7 @@
                   </div>
                   <!-- 구독 버튼 -->                        
                   <button id="subscribe-btn" class="subscribe-btn">
-                    <img class="bell-icon" id="bell-icon" src="../img/bell.png" alt="bell" style="display: none;">
+                    <img class="bell-icon" id="bell-icon" src="../../img/bell.png" alt="bell" style="display: none;">
                     <span id="subscribe-text">구독</span>
                   </button>         
                 </div>
