--- a/top/html/header-top.html
+++ b/top/html/header-top.html
@@ -7,7 +7,7 @@
     </button>
     
     <a href="../../index.html" class="logo-button">
-      <img  src="../img/youtube-Logo.png" alt="로고아이콘" class="logo-icon" />     
+      <img  src="../img/youtubeLogo.png" alt="로고아이콘" class="logo-icon" />     
     </a>
   </div>
   <div class="center">
