--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link href="./home/home.css" rel="stylesheet" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>유튜브 클론 페이지</title>    
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />    
-    <link rel="stylesheet" href="./css/common.css"/>
+    <link rel="stylesheet" href="./css/common.css"/>    
+    <link rel="stylesheet" href="./home/home.css" />
+    <link rel="stylesheet" href="" />
   </head>
   <body>
     <div class="wrapper">
