채널페이지 구독 기능 스크립트 추가

--- a/Channel/channel.html
+++ b/Channel/channel.html
@@ -99,6 +99,8 @@
     <script src="../js/topLoad600px.js"></script>    
     <!--1315 미만일때-->
     <script src="../js/page1315px.js"></script>
+    <!-- 구독 버튼 -->
+    <script src="../js/subscribe.js"></script>
     <!-- 계산기 -->
     <script src="../js/getChannelEverything.js"></script>        
     
