--- a/videos/videos.html
+++ b/videos/videos.html
@@ -136,6 +136,8 @@
   <script src="../js/topLoad600px.js"></script>
   <!-- 계산기 -->
   <script src="../js/getChannelEverything.js"></script>
+  <!-- 구독 버튼 -->
+  <script src="../js/subscribe.js"></script>
 
   <!-- 검색시 메인페이지 이동 -->
   <script src="../js/searching.js"></script>     
