메인 페이지 스크립트 추가

--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
     <script src="./js/page1315px.js"></script> 
     <!-- 사이드 바 -->
     <script src="./sidebar/sidebar.js"></script>   
+    <!-- 사이드바 -->
+    <script src="./js/subscribe.js"></script>
     <!-- 계산기 -->
     <script src="./js/getChannelEverything.js"></script>
 
