버튼 타입 추가

--- a/top/html/header-sub.html
+++ b/top/html/header-sub.html
@@ -37,10 +37,10 @@
         <div class="filter-column">
           <h4>업로드 날짜</h4>
           <ul>
-            <li><button class="filter-option" data-filter="today">오늘</button></li>
-            <li><button class="filter-option" data-filter="this-week">일주일 전</button></li>
-            <li><button class="filter-option" data-filter="this-month">한달 전</button></li>
-            <li><button class="filter-option" data-filter="this-year">1년 전</button></li>
+            <li><button type="button" class="filter-option" data-filter="today" >오늘</button></li>
+            <li><button type="button" class="filter-option" data-filter="this-week" >일주일 전</button></li>
+            <li><button type="button" class="filter-option" data-filter="this-month" >한달 전</button></li>
+            <li><button type="button" class="filter-option" data-filter="this-year" >1년 전</button></li>
           </ul>
         </div>
         <div class="filter-column">
